--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -6,14 +6,14 @@
 
 ---
 
-<footer id="contact" class="bg-gray-200">
+<section id="contact" >
 
   
   <hr class="border-2 border-blue-500 w-full"/>
   
-  <h2 class="text-2xl font-bold mb-4 ml-2">Contacto para Profesionales o Instituciones</h2>
+  <h2 class="text-2xl font-bold mt-2 mb-4 ml-2">Contacto para Profesionales o Instituciones</h2>
 
-  <form class="max-w-md mx-auto mb-5" method="POST" >
+  <form class="max-w-md mx-auto" method="POST" >
       <div class="grid grid-cols-2 gap-3">
         <div class="relative z-0 w-full mb-5 group">
           <input type="text" name="floating_name" id="floating_name" class="block py-2.5 px-0 w-full text-sm
@@ -49,8 +49,8 @@
 
       
 
-      <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-700">Enviar Mensaje</button>
+      <button type="submit" class="bg-blue-500 mb-3 text-white py-2 px-4 rounded-md hover:bg-blue-700">Enviar Mensaje</button>
   </form>
 
   
-</footer>
+</section>
