--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@fontsource/roboto-mono'
 
 import Header from '../components/Header.astro';
 import Form from '../components/Form.astro';
+import Footer from '../components/Footer.astro';
 
 const { title } = Astro.props;
 
@@ -17,10 +18,14 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/cardboards.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 	</head>
 	<body class="bg-gray-100">
 		<Header />
 		<slot />
+		<div class="mb-6" />
 		<Form />
+		<Footer />
 	</body>
 </html>
+
