--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <div class="fixed top-0 left-0 z-50 w-full h-16 bg-white border-t border-gray-200 dark:bg-gray-700 dark:border-gray-600">
-<header class="bg-blue-500 text-white py-4">
+<header class="bg-blue-500 text-gray-100 py-4">
   <div class="container mx-auto flex justify-between items-center h-12">
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
@@ -14,9 +14,9 @@
       <nav class="mr-5 ">
         <ul class="inline-flex gap-5 sm:gap-2 md:gap-3 ">
           <li><a href="/" class="hover:text-blue-900 hover:underline">Home</a></li>
-          <li><a href="/about" class="hover:text-blue-900 hover:underline">About</a></li>
           <li><a href="/pricing" class="hover:text-blue-900 hover:underline">Pricing</a></li>
           <li><a href="#contact" class="hover:text-blue-900 hover:underline">Contact</a></li>
+          <li><a href="/about" class="hover:text-blue-900 hover:underline">About</a></li>
         </ul>
       </nav>
   </div>
