--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 	</head>
-	<body class="bg-gray-100">
+	<body class="bg-gray-100 text-gray-700">
 		<Header />
 		<slot />
 		<div class="mb-6" />
