--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
-import CarouselA from '../components/CarouselA.astro';
+import Carousel from '../components/Carousel.astro';
 ---
 
 <Layout title="MediSim VR">
 	<main class="min-h-screen mt-24 mx-3 flex flex-col">
 
-		<CarouselA />
+
+		<Carousel/>
+		
 		
 		<section id="characteristics">
 			<h2 class="text-bold text-2xl text-blue-500">Características</h2>
