--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,16 @@
 <footer class="bg-gray-800 text-white p-6">
   <div class="container mx-auto flex justify-between items-center">
-      <div>
+      <div class="flex flex-col">
           <h4 class="text-lg font-bold mb-2">Contacto</h4>
-          <p>Email: info@medisimvr.com</p>
-          <p>Teléfono: +123 456 7890</p>
+          <a href="mailto:info@medisimvr.com" class="hover:text-blue-200">Email: info@medisimvr.com</a>
+          <a href="tel:+1234567890" class="hover:text-blue-200">Teléfono: +123 456 7890</a>
       </div>
       <div>
           <h4 class="text-lg font-bold mb-2">Síguenos</h4>
-          <ul class="flex space-x-4">
-              <li><a href="#" class="hover:text-[#e2c3cf]">Facebook</a></li>
-              <li><a href="#" class="hover:text-[#e2c3cf]">Twitter</a></li>
-              <li><a href="#" class="hover:text-[#e2c3cf]">LinkedIn</a></li>
+          <ul class="flex flex-col md:flex-row gap-y-2 space-x-4">
+              <li><a href="https://facebook.com" class="hover:text-blue-200">Facebook</a></li>
+              <li><a href="https://x.com" class="hover:text-blue-200">Twitter</a></li>
+              <li><a href="https://linkedin.com" class="hover:text-blue-200">LinkedIn</a></li>
           </ul>
       </div>
   </div>
