--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,13 +8,13 @@
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
         <img src="/LogoNB.png" class="w-16 h-auto" />
-        <h1 class="text-2xl md:text-4xl font-bold">MediSim VR</h1>
+        <h1 class="text-xl md:text-4xl font-bold">MediSim VR</h1>
       </a>
       <!-- Barra de navegación con enlaces -->
       <nav class="mr-5 ">
         <ul class="inline-flex gap-5 sm:gap-2 md:gap-3 ">
           <li><a href="/" class="hover:text-blue-900 hover:underline">Home</a></li>
-          <li><a href="/pricing" class="hover:text-blue-900 hover:underline">Pricing</a></li>
+          <li><a href="/plans" class="hover:text-blue-900 hover:underline">Plans</a></li>
           <li><a href="#contact" class="hover:text-blue-900 hover:underline">Contact</a></li>
           <li><a href="/about" class="hover:text-blue-900 hover:underline">About</a></li>
         </ul>
