Solve minor problem with footer columns

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
       </div>
       <div>
           <h4 class="text-lg font-bold mb-2">Síguenos</h4>
-          <ul class="flex flex-col md:flex-row gap-y-2 space-x-4">
+          <ul class="flex flex-col md:flex-row gap-x-2 text-left">
               <li><a href="https://facebook.com" class="hover:text-blue-200">Facebook</a></li>
               <li><a href="https://x.com" class="hover:text-blue-200">Twitter</a></li>
               <li><a href="https://linkedin.com" class="hover:text-blue-200">LinkedIn</a></li>
