More minor changes an additions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,28 @@ import Carousel from '../components/Carousel.astro';
 ---
 
 <Layout title="MediSim VR">
-	<main class="min-h-screen mt-24 mx-3 flex flex-col">
+	<main class="min-h-screen mt-22 mx-32 flex flex-col">
 
-
-		<Carousel/>
+		<!-- <Carousel/> -->
 		
+		<section class="flex mt-24" >
+			<div class="w-3/4 flex flex-col justify-center items-center">
+				<span>
+					<h2 class="font-extrabold text-4xl text-blue-500 ">Medisim<strong class="text-black">VR</strong></h2>
+					<p class="text-xl font-semibold text-gray-700">Reinventado la medicina</p>
+					<button type="button" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600
+						hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg
+						text-sm px-5 py-2.5 text-center"
+					>
+						Pruebalo gratis ahora
+					</button>
+				</span>
+				
+				
+			</div>
+			<img src="/UsoBanner.webp" alt="MediSim VR" class="w-1/2 h-1/2 rounded-lg   shadow-lg">
+		</section>
+
 		
 		<section id="characteristics">
 			<h2 class="text-bold text-2xl text-blue-500">Características</h2>
