solve mx mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Carousel from '../components/Carousel.astro';
 ---
 
 <Layout title="MediSim VR">
-	<main class="min-h-screen mt-22 mx-32 flex flex-col">
+	<main class="min-h-screen mt-22 mx-3 md:mx-32 flex flex-col">
 
 		<!-- <Carousel/> -->
 		
