Created new Landing

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,8 @@
 
 ---
 
-<div class="fixed top-0 left-0 z-50 w-full h-16 bg-white border-t border-gray-200 dark:bg-gray-700 dark:border-gray-600">
-<header class="bg-blue-500 text-gray-100 py-4">
-  <div class="container mx-auto flex justify-between items-center h-12">
+<header class="sticky top-0 w-full h-16 border-gray-200 bg-blue-500 text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
+  <div class="container mx-auto flex justify-between items-center">
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
         <img src="/LogoNB.png" class="w-16 h-auto" />
@@ -21,4 +20,3 @@
       </nav>
   </div>
 </header>
-</div>
