--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -8,8 +8,8 @@
 
 <section id="contact">
   
-  <div class="mx-2">
-    <h2 class="text-2xl font-bold mt-2 mb-4 ml-2">Contacto para Profesionales o Instituciones</h2>
+  <div class="mx-2 mt-2">
+    <h2 class="text-2xl font-bold mb-4 ml-2">Contacto para Profesionales o Instituciones</h2>
 
     <form class="max-w-md mx-auto" method="POST" >
         <div class="grid grid-cols-2 gap-3">
