--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 	<body class="bg-gray-100 text-gray-700">
 		<Header />
 		<slot />
-		<Form />
+		<!--Form /-->
 		<Footer />
 		
 	</body>
