--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@
 		</section>
 
         
-    <div id="whyToUse" class="mx-5 flex justify-center items-center gap-5">
+    <div id="whyToUse" class="mx-5 md:mx-32 flex justify-center items-center gap-5 ">
 
       <div class="flex flex-col w-1/2">
         <h3 class="text-bold text-4xl text-blue-500 mb-3">¿Por qué MediSimVR?</h3>
@@ -96,6 +96,7 @@
 
       <!-- GENERADAS MEDIANTE IA -->
       <ul class="w-[80%] mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        
         <li class="border p-4 rounded-md border-blue-300">
           <p class="text-gray-700">"MediSimVR ha transformado la forma en que practico procedimientos médicos. La experiencia virtual es increíblemente realista y valiosa para mi formación."</p>
           <p class="text-gray-500 mt-2">- Dra. María García, Cirujana General</p>
@@ -103,7 +104,7 @@
     
         <li class="border p-4 rounded-md border-blue-300">
           <p class="text-gray-700">"Como anestesista, la simulación de MediSimVR me ha permitido mejorar mis habilidades y enfrentarme a situaciones desafiantes. Una herramienta indispensable en mi práctica diaria."</p>
-          <p class="text-gray-500 mt-2">- Dr. Javier Rodríguez, Anestesiólogo</p>
+          <p class="text-gray-500 mt-2">- Dr. Javier Rodríguez, Anestesista</p>
         </li>
     
         <li class="border p-4 rounded-md border-blue-300">
@@ -116,22 +117,22 @@
           <p class="text-gray-500 mt-2">- Dr. Carlos Martínez, Profesor de Cirugía</p>
         </li>
     
-        <li class="border p-4 rounded-md border-blue-300">
+        <li class="border p-4 rounded-md border-blue-300 hidden sm:block">
           <p class="text-gray-700">"La flexibilidad de Medisim para trabajar desde cualquier lugar es un cambio de juego. Puedo practicar procedimientos desde mi hogar, lo cual es increíblemente conveniente."</p>
           <p class="text-gray-500 mt-2">- Dra. Ana López, Ginecóloga</p>
         </li>
     
-        <li class="border p-4 rounded-md border-blue-300">
+        <li class="border p-4 rounded-md border-blue-300 hidden sm:block">
           <p class="text-gray-700">"Como instructor de medicina, he visto el impacto positivo de MediSimVR en la formación de estudiantes. La retroalimentación directa de profesionales médicos es invaluable."</p>
           <p class="text-gray-500 mt-2">- Dr. Luis Fernández, Instructor de Medicina</p>
         </li>
     
-        <li class="border p-4 rounded-md border-blue-300">
+        <li class="border p-4 rounded-md border-blue-300 hidden sm:block">
           <p class="text-gray-700">"La opción especializada de MediSimVR para profesionales médicos está diseñada pensando en nuestras necesidades específicas. Es una herramienta que realmente marca la diferencia en la práctica clínica."</p>
           <p class="text-gray-500 mt-2">- Dra. Marta Sánchez, Especialista en Medicina Interna</p>
         </li>
     
-        <li class="border p-4 rounded-md border-blue-300">
+        <li class="border p-4 rounded-md border-blue-300 hidden sm:block">
           <p class="text-gray-700">"MediSimVR ha supuesto un ahorro significativo en costos asociados con prácticas físicas y materiales educativos. Una solución eficiente y rentable para la formación médica."</p>
           <p class="text-gray-500 mt-2">- Dr. Juan Ramírez, Jefe de Residencia en Cirugía</p>
         </li>
@@ -142,12 +143,13 @@
 
     
 
-    <section class="flex justify-center items-center">
-      <div class="w-1/2">
-        <h1>HOLAAAAA</h1>
-      </div>
+    <section class="flex justify-center items-center mb-5">
+      
+      <img src="/Uso2.webp" alt="MediSim VR" class="w-1/3 shadow-lg">
 
-      <Form />
+      <div class="self-start">
+        <Form />
+      </div>
     </section>
 
 
