--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,14 +46,14 @@
 		</section>
 
         
-    <div id="whyToUse" class="mx-5 md:mx-32 flex justify-center items-center gap-5 ">
+    <div id="whyToUse" class="mx-5 md:mx-32 flex justify-center items-start gap-5 ">
 
       <div class="flex flex-col w-1/2">
         <h3 class="text-bold text-4xl text-blue-500 mb-3">¿Por qué MediSimVR?</h3>
         <img src="/Uso1.webp" alt="MediSim VR" class="shadow-lg">
       </div>
 
-      <div class="self-start mt-8 w-1/2 h-full flex flex-col gap-3 justify-start items-start">
+      <div class="mt-8 w-1/2 h-full flex flex-col gap-3 justify-start items-start">
       
         <section class="flex flex-col justify-center items-center gap-2">
           <h4 class="self-start text-semibold text-lg sm:text-2xl text-gray-700 underline">¿Qué es MediSim VR?</h4>
