Change Color Palette

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,9 +1,5 @@
 ---
 
-  export const prerender = false;
-
-
-
 ---
 
 <section id="contact">
@@ -16,10 +12,10 @@
           <div class="relative z-0 w-full mb-5 group">
             <input type="text" name="floating_name" id="floating_name" class="block py-2.5 px-0 w-full text-sm
               text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white
-              dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-500 peer" placeholder=" " required />
+              dark:border-gray-600 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
             <label for="floating_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform
-              -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-500
-            peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75
+              -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-primary
+            peer-focus:dark:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75
               peer-focus:-translate-y-6"
             >
               Nombre
@@ -29,10 +25,10 @@
           <div class="relative z-0 w-full mb-5 group">
             <input type="email" name="floating_email" id="floating_email" class="block py-2.5 px-0 w-full text-sm
               text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white
-              dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-500 peer" placeholder=" " required />
+              dark:border-gray-600 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
             <label for="floating_email" class="peer-focus:font-medium absolute text-sm text-gray-500
             dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4
-              rtl:peer-focus:left-auto peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100
+              rtl:peer-focus:left-auto peer-focus:text-primary-600 peer-focus:dark:text-primary peer-placeholder-shown:scale-100
               peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
             >
               Email
@@ -47,7 +43,7 @@
 
         
 
-        <button type="submit" class="bg-blue-500 mb-3 text-white py-2 px-4 rounded-md hover:bg-blue-700">Enviar Mensaje</button>
+        <button type="submit" class="bg-primary mb-3 text-white py-2 px-4 rounded-md hover:bg-secondary">Enviar Mensaje</button>
     </form>
   </div>
   
