--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<header class="sticky top-0 w-full h-16 border-gray-200 bg-blue-500 text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
+<header class="sticky top-0 w-full h-16 border-gray-200 bg-primary text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
   <div class="container mx-auto flex justify-between items-center">
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
@@ -11,11 +11,10 @@
       </a>
       <!-- Barra de navegación con enlaces -->
       <nav class="mr-5 ">
-        <ul class="inline-flex gap-5 sm:gap-2 md:gap-3 ">
-          <li><a href="/" class="hover:text-blue-900 hover:underline">Home</a></li>
-          <li><a href="/plans" class="hover:text-blue-900 hover:underline">Plans</a></li>
-          <li><a href="#contact" class="hover:text-blue-900 hover:underline">Contact</a></li>
-          <li><a href="/about" class="hover:text-blue-900 hover:underline">About</a></li>
+        <ul class="inline-flex gap-5 sm:gap-2 md:gap-3">
+          <li><a href="/plans" class="hover:text-dark_primary hover:underline">Plans</a></li>
+          <li><a href="#contact" class="hover:text-dark_primary hover:underline">Contact</a></li>
+          <li><a href="/about" class="hover:text-dark_primary hover:underline">About</a></li>
         </ul>
       </nav>
   </div>
