--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -43,7 +43,7 @@
 
         
 
-        <button type="submit" class="bg-primary mb-3 text-white py-2 px-4 rounded-md hover:bg-secondary">Enviar Mensaje</button>
+        <button type="submit" class="bg-gradient-to-r from-teal-400 to-columbia-400 text-white py-2 px-4 rounded-md hover:bg-gradient-to-br">Enviar Mensaje</button>
     </form>
   </div>
   
