--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="About">
 
-  <main class="min-h-screen mt-24 mx-3">
+  <main class="min-h-screen mx-3">
     <h1 class="text-4xl font-bold underline">About</h1>
     <p> Pagina creada para la asignatura IPO 23-24 por Alejandro Aceves y Raul Ferri. Usando:</p>
     
