--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@
 				<div>
 					<h2 class=" font-extrabold text-xl sm:text-2xl md:text-4xl text-primary ">Medisim<strong class="text-black">VR</strong></h2>
 					<p class="text-base sm:text-lg md:text-xl font-semibold text-gray-700">Reinventado la medicina</p>
-					<button type="button" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br
+					<a href="profesional" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-columbia-400 hover:bg-gradient-to-br
 						focus:ring-4 focus:outline-none font-medium rounded-lg text-sm p-1 md:px-5 md:py-2.5 text-center"
 					>
 						Pruebalo gratis ahora
-            <svg xmlns="http://www.w3.org/2000/svg"
+            <svg 
               width="24" height="24" viewBox="0 0 24 24"
               stroke-width="1.5" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round"
@@ -39,7 +39,7 @@
               <path d="M15 16l4 -4" />
               <path d="M15 8l4 4" />
             </svg>
-					</button>
+					</a>
 				</div>
 				
 				
@@ -97,7 +97,7 @@
     <div class="flex flex-col justify-center items-center py-3 bg-secondary text-center">
       <h2 class="text-xl md:text-3xl font-bold mb-4">¡Accede inmediatamente a contenidos de práctica de alta calidad!</h2>
       <p class="text-sm md:text-lg mb-6">Transforma tu aprendizaje médico con MediSim VR. Regístrate ahora y lleva tu educación médica al siguiente nivel.</p>
-      <button type="button" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br
+      <a href="/profesional" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-columbia-400 hover:bg-gradient-to-br
         focus:ring-4 focus:outline-none font-medium rounded-lg text-sm p-1.5 md:px-5 md:py-2.5 text-center"
       >
         Pruebalo gratis ahora
@@ -111,7 +111,7 @@
           <path d="M15 16l4 -4" />
           <path d="M15 8l4 4" />
         </svg>
-      </button>
+      </a>
     </div>
 
     <section id="opinions" class="py-8 mx-auto">
@@ -121,42 +121,42 @@
       <!-- GENERADAS MEDIANTE IA -->
       <ul class="w-[80%] mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
         
-        <li class="border p-4 rounded-md border-secondary">
+        <li class="border p-4 rounded-md border-teal">
           <p class="text-gray-700">"MediSimVR ha transformado la forma en que practico procedimientos médicos. La experiencia virtual es increíblemente realista y valiosa para mi formación."</p>
           <p class="text-gray-500 mt-2">- Dra. María García, Cirujana General</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary">
+        <li class="border p-4 rounded-md border-teal">
           <p class="text-gray-700">"Como anestesista, la simulación de MediSimVR me ha permitido mejorar mis habilidades y enfrentarme a situaciones desafiantes. Una herramienta indispensable en mi práctica diaria."</p>
           <p class="text-gray-500 mt-2">- Dr. Javier Rodríguez, Anestesista</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary">
+        <li class="border p-4 rounded-md border-teal">
           <p class="text-gray-700">"He utilizado MediSimVR para entrenar a mi equipo en cirugía cardíaca. La plataforma ofrece un entorno práctico y seguro para perfeccionar nuestras técnicas."</p>
           <p class="text-gray-500 mt-2">- Dra. Laura Pérez, Cirujana Cardiovascular</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary">
+        <li class="border p-4 rounded-md border-teal">
           <p class="text-gray-700">"La interactividad en entornos tridimensionales de MediSimVR proporciona una comprensión más profunda de los procedimientos quirúrgicos. ¡Una herramienta excepcional para la educación médica!"</p>
           <p class="text-gray-500 mt-2">- Dr. Carlos Martínez, Profesor de Cirugía</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary hidden sm:block">
+        <li class="border p-4 rounded-md border-teal hidden sm:block">
           <p class="text-gray-700">"La flexibilidad de Medisim para trabajar desde cualquier lugar es un cambio de juego. Puedo practicar procedimientos desde mi hogar, lo cual es increíblemente conveniente."</p>
           <p class="text-gray-500 mt-2">- Dra. Ana López, Ginecóloga</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary hidden sm:block">
+        <li class="border p-4 rounded-md border-teal hidden sm:block">
           <p class="text-gray-700">"Como instructor de medicina, he visto el impacto positivo de MediSimVR en la formación de estudiantes. La retroalimentación directa de profesionales médicos es invaluable."</p>
           <p class="text-gray-500 mt-2">- Dr. Luis Fernández, Instructor de Medicina</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary hidden sm:block">
+        <li class="border p-4 rounded-md border-teal hidden sm:block">
           <p class="text-gray-700">"La opción especializada de MediSimVR para profesionales médicos está diseñada pensando en nuestras necesidades específicas. Es una herramienta que realmente marca la diferencia en la práctica clínica."</p>
           <p class="text-gray-500 mt-2">- Dra. Marta Sánchez, Especialista en Medicina Interna</p>
         </li>
     
-        <li class="border p-4 rounded-md border-secondary hidden sm:block">
+        <li class="border p-4 rounded-md border-teal hidden sm:block">
           <p class="text-gray-700">"MediSimVR ha supuesto un ahorro significativo en costos asociados con prácticas físicas y materiales educativos. Una solución eficiente y rentable para la formación médica."</p>
           <p class="text-gray-500 mt-2">- Dr. Juan Ramírez, Jefe de Residencia en Cirugía</p>
         </li>
