--- a/src/pages/plans.astro
+++ b/src/pages/plans.astro
@@ -4,7 +4,7 @@
 
 <Layout title="Pricing">
 
-    <main class="mt-24 mx-3 min-h-screen">
+    <main class="mx-3 min-h-screen">
     
         <h1 class=" text-xl font-semibold text-blue-500">
             ¡Transforma tu Aprendizaje Médico con MediSim VR!
