--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-footer text-white p-6">
+<footer class="bg-primary-400 text-white p-6 shadow">
   <div class="container mx-auto flex justify-between items-center">
       <div class="flex flex-col">
           <h4 class="text-lg font-bold mb-2">Contacto</h4>
@@ -13,5 +13,23 @@
               <li><a href="https://linkedin.com" class="hover:text-tertiary">LinkedIn</a></li>
           </ul>
       </div>
+  </div>
+  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 Alejandro Aceves-Raul Ferri. Casi todos los derechos reservados.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+            <a href="/about" class="hover:underline me-4 md:me-6">About</a>
+        </li>
+        <li>
+            <a class="hover:underline me-4 md:me-6">Privacy Policy</a>
+        </li>
+        <li>
+            <a class="hover:underline me-4 md:me-6">Licensing</a>
+        </li>
+        <li>
+            <a class="hover:underline">Contact</a>
+        </li>
+    </ul>
   </div>
 </footer>
