--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<header class="sticky top-0 w-full h-16 border-gray-200 bg-primary text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
+<header class="sticky top-0 w-full h-16 border-gray-200 bg-teal text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
   <div class="container mx-auto flex justify-between items-center">
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
