--- a/src/layouts/LayoutProf.astro
+++ b/src/layouts/LayoutProf.astro
@@ -2,8 +2,8 @@
 import '@fontsource/roboto-mono'
 
 import Header from '../components/Header.astro';
-import Form from '../components/Form.astro';
 import Footer from '../components/Footer.astro';
+import SideNav from '../components/SideNav.astro';
 
 const { title } = Astro.props;
 
@@ -17,13 +17,20 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/cardboards.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{title}</title> 
 	</head>
-	<body class="min-h-screen bg-lavender-900 text-gray-700">
+	
+	<body class=" bg-gray-50 text-gray-700">
+
 		<Header />
-		<slot />
-		<!--Form /-->
+		<div class="flex gap-3 min-h-screen">
+			<SideNav estado="Estudiante"/>
+			<main class="w-full">
+				<slot />	
+			</main>
+		</div>
 		<Footer />
 		
 	</body>
+
 </html>
