Checked minor problems and added small DashBoard

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -8,9 +8,9 @@
 ---
 
     <aside class="min-h-full pr-2 pl-3 border-r-2 bg-gray-100 border-white ">
-      <ul class="font-bold w-48 mx-6">
+      <ul class="font-bold w-48">
         <li class="py-3 sm:py-4">
-          <div class="flex items-center justify-center">
+          <a href="/profesional" class="flex items-center justify-center p-2 rounded-xl hover:bg-slate-300">
             <div class="rounded-full overflow-hidden border-2 border-gray-200 shadow-sm">
               <img src="https://via.placeholder.com/40" alt="Usuario" class="w-10 h-10" />
             </div>
@@ -20,7 +20,7 @@
                 { estado }	
               </span>
             </div>
-          </div>
+          </a>
         </li>
         <li class="py-2 border-b border-opacity-50">
           <div class="px-2 rounded-md hover:bg-gray-200 flex gap-2">
