--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,7 @@
 ---
 
+  const { estado } = Astro.props; 
+
 ---
 
 <header class="sticky top-0 w-full h-16 border-gray-200 bg-teal text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
@@ -11,10 +13,11 @@
       </a>
       <!-- Barra de navegación con enlaces -->
       <nav class="mr-5 ">
-        <ul class="inline-flex gap-5 sm:gap-2 md:gap-3">
+        <ul class="inline-flex gap-5 sm:gap-2 md:gap-3 justify-center items-center">
           <li><a href="/plans" class="hover:text-dark_primary hover:underline">Plans</a></li>
           <li><a href="#contact" class="hover:text-dark_primary hover:underline">Contact</a></li>
           <li><a href="/about" class="hover:text-dark_primary hover:underline">About</a></li>
+          {estado != undefined && <img src="https://via.placeholder.com/40" alt="Usuario" class="w-10 h-10 cursor-pointer rounded-full" />}
         </ul>
       </nav>
   </div>
