--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen bg-lavender-900 text-gray-700">
-		<Header />
-		<slot />
-		<!--Form /-->
+		<Header estado="Estudiante"/>
+		<main class="mx-3 min-h-screen">
+			<slot />
+			<!--Form /-->
+		</main>
 		<Footer />
 		
 	</body>
