--- a/src/pages/profesional/guides[id].astro
+++ b/src/pages/profesional/guides[id].astro
@@ -5,8 +5,8 @@
 
 <LayoutProf>
 
-  <h1 class="text-2xl font-bold mb-4">Historial de Procedimientos</h1>
-  <h3 class="text-xl font-bold mb-3">Procedimientos Recientes</h3>
+  <h1 class="text-2xl font-bold mb-4">Guias de Uso</h1>
+  <h3 class="text-xl font-bold mb-3">Más utilizadas</h3>
 
   <ul class="max-w-md divide-y divide-gray-200 dark:divide-gray-700">
     <li class="pb-3 sm:pb-4">
