--- a/src/pages/profesional/procedure[id].astro
+++ b/src/pages/profesional/procedure[id].astro
@@ -59,9 +59,7 @@
 
     </div>
 
-
-
-    <ul id="procedures">
+    <ul id="procedures" class="mt-3 border-t-2 border-gray-300">
         {data2.map((procedure) => (
             <li class={`${procedure.tipo} procedimiento flex items-center justify-between border-b-2 border-gray-300 p-2 hover:bg-gray-200`}>
                 <div class="flex gap-2">
